Improved timing of updateGridRowEnd() call so that it only and always gets called if we have a height and width for the image, fixing layout bug in Safari.

--- a/src/styles/modules/product-list.module.css
+++ b/src/styles/modules/product-list.module.css
@@ -6,6 +6,17 @@
   border: 1px solid var(--orange);
   position: relative;
 }
+.productImageWrap {
+  height: 0;
+  position: relative;
+}
+.productImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .productInfo {
   padding: 15px 10px 10px;
 
